# Convex_Hull

./: .gitignore  CMakeLists.txt  README.md
data/: input.txt  output.txt
include/: Conflict_graph.hpp  Edge.hpp  Face.hpp  Plane.hpp  Point.hpp  Polyhedron.hpp  Triangle.hpp  Vector.hpp  Vertex.hpp  comparator.hpp  data_converter.hpp  data_generator.hpp  gift_wrapping.hpp  incremental_solver.hpp  naive_solver.hpp  preprocessing.hpp  quickhull_solver.hpp  timer.hpp
src/: Edge.cpp  Face.cpp  Plane.cpp  Point.cpp  Point.hpp  Polyhedron.cpp  Triangle.cpp  Triangle.hpp  Vector.cpp  Vertex.cpp  comparator.cpp  data_converter.cpp  data_generator.cpp  gift_wrapping.cpp  incremental_solver.cpp  main.cpp  naive_solver.cpp  naive_solver.hpp  preprocessing.cpp  preprocessing.hpp  quickhull_solver.cpp  time.py  timer.cpp  visualize.py
